# cloc

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  CONTRIBUTING.md  ENGINEERING_STANDARD.md  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  infrastructure.md
.github/workflows/: ci.yml  static-analysis.yml
cmake/: ClocConfig.cmake.in  CodeLineCalculatorConfig.cmake.in  CompilerOptions.cmake  Dependencies.cmake  Packaging.cmake  Sources.cmake  Tests.cmake  clocConfig.cmake.in  cloc_version.h.in  codelinecalculator_version.h.in
doc/: README.md
doc/adr/: 0001-c11-cmake-toolchain-policy.md  README.md
doc/guides/: ai-agent.md  cmake.md  environment.md  release.md  testing.md
include/cloc/: compiler.h  export.h  line_counter.h  source_preset.h
include/codelinecalculator/: compiler.h  export.h  line_counter.h  source_preset.h
scripts/: bootstrap.ps1  bootstrap.sh  check.ps1  check.sh  publish.ps1  publish.sh
src/: cli_options.c  cli_options.h  internal_utils.h  main.c
src/cloc/: line_counter.c  source_preset.c
src/codelinecalculator/: line_counter.c  source_preset.c
tests/: test_cli_options.c  test_line_counter.c  test_source_preset.c
tests/package_smoke/: CMakeLists.txt  cxx_header_smoke.cpp  main.c
tests/subproject_smoke/: CMakeLists.txt  main.c
tests/support/: test_assert.h
